# python_chess_interface

./: .gitignore  LICENSE  README.md  __init__.py  example_engine  example_engine.py  pyproject.toml
examples/: chess_interface  example_engine.py
src/chess_interface/: __init__.py  main.py
